src/test/deca/context/invalid/created/rule2.3/nen_super.deca
// Résultat erreur:
//    16:27
//    identificateur non déclaré (règle 1.3)
//
// Description:
//    tests de programme incorrect contextuellement ( fonction redeclare un identificateur )
//
// Auteur:
//    Jerome
//
// Historique:
//    cree le 13/01/2024



    class MaClasse extends NonExistantSuperClass {
  
}

